loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:7: error: not found: value doite
doite()
^