loopfor.LoopStairs.scala.code
baisseBrosse()
avance(3)

// Monter une marche
gauche()
avance()
doite()
avance()